// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme 1`] = `
.cfRhKF {
  padding: 4em;
  background: papayawhip;
}

<section
  className="cfRhKF"
>
  <styled.h1>
    Hello World, this is my first styled component!
  </styled.h1>
</section>
`;

exports[`react-test-renderer 1`] = `
.cfRhKF {
  padding: 4em;
  background: papayawhip;
}

.bqeGyV {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

.bqeGyV:hover {
  text-decoration: underline;
}

@media (min-width: 600px) {
  .bqeGyV {
    color: blue;
  }
}

<section
  className="cfRhKF"
>
  <h1
    className="bqeGyV"
  >
    Hello World, this is my first styled component!
  </h1>
</section>
`;
